--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                   ">
 								Subsystems
 							</button>
-							<button class="btn btn-primary" data-bss-hover-animate="pulse" type="button" style="
+							<button class="btn btn-primary" data-bss-hover-animate="pulse" type="button" 
+							onclick="window.location.href = 'team.html';"
+							style="
                     color: #a3f7bf;
                     background: rgba(66, 220, 163, 0);
                     backdrop-filter: opacity(0);
@@ -94,7 +96,9 @@
                     font-size: 16px;
                   ">
 								Teams</button><button class="btn btn-primary" data-bss-hover-animate="pulse"
-								type="button" style="
+								type="button" 
+								onclick="window.location.href = '#sponsors';"
+								style="
                     color: #a3f7bf;
                     background: rgba(66, 220, 163, 0);
                     backdrop-filter: opacity(0);
