file add, edits

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-	<title>Home - Evovle racing</title>
+	<title>Evolve Racing</title>
 	<link rel="canonical" href="https://evolveracing.cet.ac.in/" />
 	<meta property="og:url" content="https://evolveracing.cet.ac.in/" />
 	<meta property="og:image" content="https://evolveracing.cet.ac.in/assets/img/photo.jpg" />
@@ -26,7 +26,7 @@
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="77">
 	<nav class="navbar navbar-expand-md fixed-top navbar-light" id="mainNav" style="color: var(--bs-body-bg)">
 		<div class="container">
-			<a class="navbar-brand" href="/">Evovle racing</a><button data-bs-toggle="collapse"
+			<a class="navbar-brand" href="/">Evolve Racing</a><button data-bs-toggle="collapse"
 				class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button"
 				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu">
 				<i class="fa fa-bars"></i>
@@ -520,7 +520,9 @@
 						</h3>
 						<div class="row">
 							<div class="col d-md-flex justify-content-md-center">
-								<button class="btn btn-primary fw-bolder text-center" type="button" style="
+								<button class="btn btn-primary fw-bolder text-center" type="button" 
+								onclick="download(fileLocation= 'assets/files/EVOLVE BROCHURE.pdf', fileName='evolve.pdf')"
+								style="
                       background: #29a19c;
                       border-radius: 20px;
                       border-style: none;
@@ -565,44 +567,53 @@
             ">
 					contact us
 				</h2>
-				<div class="d-flex justify-content-lg-center">
-					<div
-						class="bs-icon-sm bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon">
-						<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 24 24" width="1em"
-							fill="currentColor" style="font-size: 30px; color: #29a19c">
-							<path d="M0 0h24v24H0z" fill="none"></path>
-							<path
-								d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z">
-							</path>
-						</svg>
+				
+					<div class="d-flex">
+						<div
+							class="bs-icon-sm bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+							<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 24 24" width="1em"
+								fill="currentColor" style="font-size: 30px; color: #29a19c">
+								<path d="M0 0h24v24H0z" fill="none"></path>
+								<path
+									d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z">
+								</path>
+							</svg>
+						</div>
+						<div class="px-3">
+							<a href="mailto:evovleracing@cet.ac.in" style="text-decoration: none" >
+								<p class="text-white" style="font-family: Lora, serif; color: #29a19c">
+									evolveracing@cet.ac.in
+								</p>
+							</a>
+						</div>
 					</div>
-					<div class="px-3">
-						<p class="text-white" style="font-family: Lora, serif; color: #29a19c">
-							evolveracing@cet.ac.in
-						</p>
+					<div class="d-flex ">
+						<div
+							class="bs-icon-sm bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+							<i class="fa fa-instagram" style="font-size: 30px; color: #29a19c"></i>
+						</div>
+						<div class="px-3">
+							<a href="https://www.instagram.com/evolve__racing/" style="text-decoration: none" >
+								<p class="text-white" style="font-family: Lora, serif; color: #29a19c">
+									   evolve__racing   
+								</p>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="d-flex justify-content-lg-center">
-					<div
-						class="bs-icon-sm bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon">
-						<i class="fa fa-linkedin" style="font-size: 30px; color: #29a19c"></i>
-					</div>
-					<div class="px-3">
-						<p class="text-white" style="font-family: Lora, serif; color: #29a19c">
-							evolveracing@cet.ac.in
-						</p>
-					</div>
-				</div>
-				<div class="d-flex justify-content-lg-center">
-					<div
-						class="bs-icon-sm bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon">
-						<i class="fa fa-phone" style="font-size: 30px; color: #29a19c"></i>
-					</div>
-					<div class="px-3">
-						<p class="text-white" style="font-family: Lora, serif; color: #29a19c">
-							evolveracing@cet.ac.in
-						</p>
-					</div>
+					<div class="d-flex ">
+						<div
+							class="bs-icon-sm bs-icon-rounded text-primary d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+							<i class="fa fa-phone" style="font-size: 30px; color: #29a19c"></i>
+						</div>
+						<div class="px-3">
+							<a href="tel:+919207348538" style="text-decoration: none" >
+								<p class="text-white" style="font-family: Lora, serif; color: #29a19c">
+									+91 9207 348 538
+								</p>
+							</a>
+						</div>
+						</div>
+				
 				</div>
 			</div>
 		</div>
@@ -617,6 +628,32 @@
 	</footer>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="assets/js/script.min.js"></script>
+	<script src=
+	"https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js">
+	   </script>
+
+	
+	
 </body>
+<!-- download function for file -->
+<script>
+	function download(fileLocation, fileName){
+		axios({
+			url: fileLocation,
+			method:'GET',
+			responseType: 'blob'
+	})
+	.then((response) => {
+		   const url = window.URL
+		   .createObjectURL(new Blob([response.data]));
+				  const link = document.createElement('a');
+				  link.href = url;
+				  link.setAttribute('download', fileName);
+				  document.body.appendChild(link);
+				  link.click();
+	})
+	}
+	 
+ </script>
 
 </html>
