--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-light" id="mainNav" style="color: var(--bs-body-bg);">
-        <div class="container"><a class="navbar-brand" href="/">Evovle racing</a><button data-bs-toggle="collapse"
+        <div class="container"><a class="navbar-brand" href="/">Evolve Racing</a><button data-bs-toggle="collapse"
                 class="navbar-toggler navbar-toggler-right" data-bs-target="#navbarResponsive" type="button"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i
                     class="fa fa-bars"></i></button>
