--- a/team.html
+++ b/team.html
@@ -211,6 +211,16 @@
             </div>
         </div>
     </section><!-- End: #subsystems -->
+
+    <footer style="background: #435055">
+		<div class="container text-center">
+			<p style="color: #9cb9c4">
+				<br />© 2023 EVOLVE Solar EV Team. All rights reserved.
+				<br/> Designed and Developed by <a href="https://www.linkedin.com/in/niran-s-narayanan/"> Niran S Narayanan</a>.
+				<br/>Maintained by Evolve Racing CET
+			</p>
+		</div>
+	</footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
