--- a/index.html
+++ b/index.html
@@ -623,6 +623,8 @@
 		<div class="container text-center">
 			<p style="color: #9cb9c4">
 				<br />© 2023 EVOLVE Solar EV Team. All rights reserved.
+				<br/> Designed and Developed by <a href="https://www.linkedin.com/in/niran-s-narayanan/"> Niran S Narayanan</a>.
+				<br/>Maintained by Evolve Racing CET
 			</p>
 		</div>
 	</footer>
